[gd_scene load_steps=11 format=3 uid="uid://m5lt51rxel6k"]

[ext_resource type="Script" path="res://Scenes/Levels/level_1.gd" id="1_3je0i"]
[ext_resource type="Shader" path="res://Scenes/Levels/spiral.gdshader" id="2_8da7t"]
[ext_resource type="PackedScene" uid="uid://c7bsjb1jmlk11" path="res://Scenes/Actors/Player/player.tscn" id="2_lkn80"]
[ext_resource type="PackedScene" uid="uid://dlfph1wayn3a3" path="res://Scenes/Objects/Asteroids/asteroid.tscn" id="4_3f4q8"]
[ext_resource type="Script" path="res://Scripts/Game/Gameplay/asteroid_handler.gd" id="4_67ku3"]
[ext_resource type="PackedScene" uid="uid://brwkd0qyho24b" path="res://Scenes/Objects/Asteroids/astroid_infected.tscn" id="6_7j4wr"]
[ext_resource type="PackedScene" uid="uid://5tdnborn7tn7" path="res://Scenes/Objects/Asteroids/asteroid_viral_infected.tscn" id="7_h1g4b"]
[ext_resource type="PackedScene" uid="uid://crotnm6wcrwdl" path="res://Scenes/Game/UI/game_over_screen.tscn" id="7_nsfvx"]
[ext_resource type="PackedScene" uid="uid://bflto8figvnii" path="res://Scenes/Objects/Asteroids/asteroid_fractured.tscn" id="8_dul12"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0bdjn"]
shader = ExtResource("2_8da7t")
shader_parameter/depth_color = PackedVector3Array(0.129, 0.376, 0.09, 0.027, 0.263, 0.102, 0.004, 0.18, 0.176, 0, 0.055, 0.275, 0.047, 0.004, 0.173)

[node name="Level1" type="Node"]
script = ExtResource("1_3je0i")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0bdjn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = -1
anchor_top = 0.929167
anchor_right = 0.163281
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 0
offset_right = 249.0
offset_bottom = 91.0

[node name="Label" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Player" parent="." instance=ExtResource("2_lkn80")]
position = Vector2(536, 624)

[node name="Enemies" type="Node" parent="."]

[node name="Player_Projectiles" type="Node" parent="."]

[node name="Enemy_Projectiles" type="Node" parent="."]

[node name="Asteroids" type="Node" parent="."]
script = ExtResource("4_67ku3")
asteroids = Array[PackedScene]([ExtResource("4_3f4q8"), ExtResource("6_7j4wr"), ExtResource("7_h1g4b"), ExtResource("4_3f4q8"), ExtResource("8_dul12")])

[node name="Spawn_Roids" type="Timer" parent="."]

[node name="Game_Over_Screen" parent="." instance=ExtResource("7_nsfvx")]
